--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   google_fonts: ^6.3.2
   animations: ^2.1.0
   flutter_launcher_icons: ^0.14.4
+  crypto: ^3.0.6
+  encrypt: ^5.0.3
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
