--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,7 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "configurations": [
+        
         {
             "name": "a11y_assessments",
             "cwd": "Flutter\\flutter\\dev\\a11y_assessments",
@@ -490,6 +491,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "Flutter (lib/main.dart)",
+            "type": "dart",
+            "request": "launch",
+            "program": "lib/main.dart"
         },
         {
             "name": "Flutter (lib/main.dart)",
