--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   sqflite_common_ffi: ^2.3.6
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
